[package]
name = "sirula"
version = "1.0.1"
authors = ["Dorian Rudolph"]
edition = "2018"

[dependencies]
gtk-layer-shell = "0.4.1"
gtk = { version = "0.15.5", features = ["v3_22"] }
gio = { version = "0.15.12", features = ["v2_60"] }
gdk = "0.15.4"
pango = "0.15.4"
gdk-pixbuf = "0.15.11"
glib = "0.15.12"
fuzzy-matcher = "0.3.7"
xdg = "2.5.2"
serde = "1.0.209"
serde_derive = "1.0.209"
toml = "0.5.9"
regex = "1.10.6"

[profile.release]
lto = true
